# aryeo

./: .gitignore  MANIFEST.in  README.md  STYLE_GUIDE.md  mkdocs.yml  pyproject.toml
.cursor/rules/: api-client-implementation.mdc  api-source-truth.mdc  docs-tests-sync.mdc  release-quality-contract.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security-audit.yml  unified-deployment.yml
aryeo/: __init__.py  _resource.py  addresses.py  appointments.py  base_client.py  client.py  company_users.py  customer_users.py  discounts.py  enums.py  exceptions.py  listings.py  models.py  notes.py  order_forms.py  order_items.py  orders.py  payroll.py  products.py  scheduling.py  tags.py  tasks.py  types.py  videos.py
aryeo/resources/: __init__.py  _base.py  addresses.py  appointments.py  company_users.py  customer_users.py  discounts.py  listings.py  notes.py  order_forms.py  order_items.py  orders.py  payroll.py  products.py  scheduling.py  tags.py  tasks.py  videos.py
docs/: STYLE_GUIDE.md  index.md  requirements.txt
docs/api/: README.md  aryeo.json  generate_reference.py
docs/api-reference/: addresses.md  appointments.md  base-client.md  client.md  company_users.md  customer_users.md  discounts.md  enums.md  exceptions.md  index.md  listings.md  models.md  notes.md  order_forms.md  order_items.md  orders.md  payroll.md  products.md  scheduling.md  tags.md  tasks.md  videos.md
docs/api/guides/: authentication.md  errors.md  pagination.md
docs/api/reference/: README.md  addresses.md  appointments.md  company-users.md  customer-users.md  discounts.md  listings.md  notes.md  order-forms.md  order-items.md  orders.md  payroll.md  products.md  scheduling.md  tags.md  tasks.md  videos.md
docs/development/: contributing.md  index.md  planning.md
docs/getting-started/: authentication.md  index.md  installation.md  quickstart.md
docs/guides/: appointments.md  examples.md  index.md  listings.md  live-checks.md  orders.md
docs/planning/aryeo-api-client/: ARTIFACT_PATH_INDEX.md  README.md
docs/planning/aryeo-api-client/execution/: README.md  api-client-bootstrap-plan.md  api_client_PHASE_00_source_audit.md  api_client_PHASE_01_foundation.md  api_client_PHASE_02_endpoint_inventory.md  api_client_PHASE_03_tests_and_coverage.md  api_client_PHASE_04_docs_and_examples.md  api_client_PHASE_05_workflows_and_release.md  api_client_PHASE_06_parity_audit.md  execution-plan.md  roadmap.md
docs/planning/aryeo-api-client/foundation/: README.md  api-source-of-truth.md  package-and-versioning-adr.md  rules-and-ownership-adr.md  source-of-truth-matrix.md
docs/planning/aryeo-api-client/trackers/: README.md  coverage-and-tests-readiness.md  docs-parity-readiness.md  endpoint-inventory-readiness.md  live-endpoint-verification-checklist.md  live-integration-readiness.md  readiness-overview.md  workflow-release-readiness.md
docs/reference/: changelog.md  client.md  exceptions.md  index.md  resources.md
examples/: _env.py  appointments_workflow.py  customer_users_lookup.py  list_listings.py  list_orders.py  quickstart.py
tests/: __init__.py  conftest.py  helpers.py  test_addresses.py  test_appointments.py  test_base_client.py  test_client.py  test_company_users.py  test_customer_users.py  test_discounts.py  test_exceptions.py  test_generated_surface.py  test_listings.py  test_live_integrations.py  test_models.py  test_notes.py  test_order_forms.py  test_order_items.py  test_orders.py  test_payroll.py  test_products.py  test_scheduling.py  test_tags.py  test_tasks.py  test_videos.py
tools/: __init__.py  aryeo_codegen.py  aryeo_rezen_codegen.py  bootstrap_client_repo.py  verify_live_integrations.py
