
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aryeo"
version = "0.1.0"
description = "Typed Python client scaffold for the Aryeo API."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Aryeo API Client Maintainers" }]
dependencies = ["httpx"]

[project.optional-dependencies]
dev = [
  "black",
  "build",
  "coverage[toml]",
  "flake8",
  "isort",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mypy",
  "pip-audit",
  "pytest",
  "pytest-cov",
  "twine",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["aryeo", "aryeo.*"]

[tool.setuptools.package-data]
aryeo = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
max-complexity = 10
extend-ignore = ["E203", "W503"]
exclude = [
  ".git",
  "__pycache__",
  ".mypy_cache",
  ".pytest_cache",
  ".venv",
  "build",
  "dist",
  "site",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["aryeo"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
show_error_codes = true

[tool.pydocstyle]
convention = "google"
